[tool.kedro]
package_name = "hexgin"
project_name = "HexGIN"
kedro_init_version = "0.19.2"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/hexgin -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.poetry]
name = "hexgin"
version = "0.1.0"
description = ""
authors = ["Filip <ds@filip-wojcik.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kedro = {extras = ["pandas-parquet"], version = "^0.19.3"}
kedro-viz = "^8.0.1"
pandas = "^2.2.1"
torch = "^2.2.1"
scikit-learn = "^1.4.1.post1"
torch-geometric = "2.5.3"
pytorch-lightning = "^2.2.1"
torchmetrics = "^1.3.1"
mlflow = "^2.11.1"
captum = "^0.7.0"
kedro-datasets = "^3.0.1"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
tabulate = "^0.9.0"
tensorboard = "^2.17.0"
torch-scatter = {version = "^2.1.2+pt23cu121", source = "pyg_repo"}
torch-sparse = {version = "^0.6.18+pt23cu121", source = "pyg_repo"}
torch-cluster = {version = "^1.6.3+pt23cu121", source = "pyg_repo"}
torch-spline-conv = {version = "^1.2.2+pt23cu121", source = "pyg_repo"}
pyvis = "^0.3.2"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.1"


[[tool.poetry.source]]
name = "pyg_repo"
url = "https://data.pyg.org/whl/torch-2.3.0+cu121.html"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
